styles.css
body {
    font-family: Inter;
    color: #FFFFFF;
    margin: 0px;
    color-scheme: only light;
    overflow-x: hidden;
}

html {
    color-scheme: dark;
    scrollbar-color: #395049 #152523;
    scrollbar-highlight-color: #4e6d64;
    --scrollbar-color-thumb: #395049;
    --scrollbar-color-track: #152523;
    -webkit-tap-highlight-color: transparent;
}

img {
    -webkit-user-drag: none;
}

font {
    display: block;
}

hr {
    border-top: 0.1px solid #1d2423;
    border-bottom: none;
    border-left: none;
    border-right: none;
    margin-top: 24px;
    margin-bottom: 24px;
}

::selection {
    background-color: #0e2e2895;
}

.titlebar {
    display: flex;
    color: #c1cac9;
    font-size: 25px;
    font-weight: 500;
    margin: 0px;
    border-bottom: 0.1px solid #1d2726;
    background-color: #091311;
    position: sticky;
    top: 0;
    z-index: 1;
}

.content {
    margin: 32px;
}

.content2 {
    padding: 32px;
    max-width: 700px;
    margin-left: auto;
    margin-right: auto;
}

.content4 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    position: absolute;
    top: 55%;
    -ms-transform: translateY(-55%);
    transform: translateY(-55%);
}

.heading {
    color: #9bd6c2;
    font-size: 50px;
    font-weight: 700;
}

.heading2 {
    color: #9bd6c2;
    font-size: 30px;
    font-weight: 600;
}

.paragraph {
    color: #c1cac9;
    font-size: 20px;
    font-weight: 500;
    margin-top: 8px;
}

.paragraph2 {
    color: #c1cac9;
    font-size: 17px;
    font-weight: 500;
    margin-top: 8px;
}

.paragraph-hobbies {
    color: #c1cac9;
    font-size: 17px;
    font-weight: 500;
    margin-top: 8px;
    line-height: 2;
}

.me {
    margin-bottom: 32px;
    border-radius: 100px;
    border: 0.1px solid #1d2423;
}

.titlebar-title {
    margin-right: auto;
    padding: 16px;
    padding-left: 16px;
}

a.btn-titlebar {
    margin-right: 16px;
}

.project-title {
    color: #c1cac9;
    font-size: 27px;
    font-weight: 600;
    display: -webkit-box;
    line-clamp: 1;
    -webkit-line-clamp: 1;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
}

.project-summary {
    color: #9da8a7;
    font-size: 17px;
    font-weight: 500;
    margin-top: 8px;
    display: -webkit-box;
    line-clamp: 5;
    -webkit-line-clamp: 5;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
}

@keyframes navigation-btn-animation {
    from { background-size: 0px 1px; }
    to { background-size: 100px 1px; }
}

.iconify.btn.selected:not(.iconify.btn.selected.noanimate) {
    color: #4fb493;
    background: linear-gradient(to right, transparent 25%, #4fb493 25%, #4fb493 75%, transparent 75%);
    background-position: bottom;
    background-repeat: no-repeat;
    animation: navigation-btn-animation 0.3s forwards;
}

.iconify.btn.selected.noanimate {
    color: #4fb493;
    background: linear-gradient(to right, transparent 25%, #4fb493 25%, #4fb493 75%, transparent 75%);
    background-size: 100px 1px;
    background-position: bottom;
    background-repeat: no-repeat;
}

.iconify.btn {
    color: #c1cac9;
    height: 100%;
}

.iconify.btn:not(.iconify.btn.selected):hover {
    color: #797979;
    background: linear-gradient(to right, transparent 25%, #797979 25%, #797979 75%, transparent 75%);
    background-position: bottom;
    background-repeat: no-repeat;
    animation: navigation-btn-animation 0.3s forwards;
}

.content3 {
    padding: 32px;
    max-width: 1000px;
    margin-left: auto;
    margin-right: auto;
}

@media (min-width: 670px) {
    .project {
        display: flex;
        background-color: #0a1312;
        border-radius: 20px;
        margin-bottom: 16px;
        text-decoration: none;
        margin-left: auto;
        margin-right: auto;
        border: 1px solid #1d2423;
        height: 170px;
    }

    .project-image {
        width: 272px;
        max-width: 100%;
        height: 170px;
        object-fit: cover;
        border-top-left-radius: 20px;
        border-bottom-left-radius: 20px;
        background-color: #040a09;
    }

    .project-text {
        padding: 16px;
        padding-left: 20px;
        text-align: left;
        border-left: 1px solid #1d2423;
    }
}

@media (max-width: 669px) {
    .project {
        display: block;
        background-color: #0a1312;
        border-radius: 20px;
        margin-bottom: 32px;
        margin-left: auto;
        margin-right: auto;
        max-width: 400px;
        text-decoration: none;
        border: 1px solid #1d2423;
    }

    .project-image {
        display: block;
        width: 400px;
        max-width: 100%;
        height: auto;
        aspect-ratio: 1.6;
        object-fit: cover;
        border-top-left-radius: 20px;
        border-top-right-radius: 20px;
        background-color: #040a09;
    }

    .project-text {
        padding: 16px;
        border-top: 1px solid #1d2423;
    }

    .project-title {
        line-clamp: 2;
        -webkit-line-clamp: 2;
    }

    .project-summary {
        line-clamp: 3;
        -webkit-line-clamp: 3;
    }
}

.project:hover {
    background-color: #0b201d;
}

.project:hover, .project:hover .project-text {
    border-color: #222c2b;
}

.project:hover img {
    opacity: 0.5 !important;
}

.project:active {
    background-color: #0e2925;
    border-radius: 20px;
}

.project:hover .project-text .project-title {
    color: #9bd6c2;
}

.project:hover .project-text .project-summary {
    color: #82b8a6;
}

.project.download {
    display: flex;
    max-width: 200px;
    align-items: center;
    height: fit-content;
    border-radius: 10px;
    padding: 10px;
    margin-top: 8px;
    margin-bottom: 0px;
}

.project:hover font {
    color: #82b8a6;
}

.project.download:hover .iconify.text {
    color: #70a090;
}

.category {
    max-width: 200px;
}

.downloads-list {
    display: grid;
    justify-content: left;
    gap: 16px;
}

@media (min-width: 500px) {
    .downloads-list {
        grid-template-columns: 200px 200px;
    }
}

@media (min-width: 700px) {
    .downloads-list {
        grid-template-columns: 200px 200px 200px;
    }
}

.button {
    display: grid;
    color: #0b1816;
    background-color: #27b397;
    text-decoration: none;
    padding: 13px;
    padding-left: 23px;
    padding-right: 23px;
    border-radius: 100px;
    font-weight: 600;
    font-size: 17px;
    width: fit-content;
}

.button:hover {
    background-color: #1c816d;
}

.button:active {
    background-color: #165f51;
}

.tooltip {
    visibility: hidden;
    position: absolute;
    padding: 5px;
    font-size: 17px;
    background-color: #28413c;
    color: #c1cac9;
    border-radius: 5px;
    z-index: 1;
    top: 55px;
    margin-left: -20px;
    opacity: 0;
    user-select: none;
    transition: all 0.3s;
}

.btn-titlebar:hover .tooltip, .dino:hover .tooltip1 {
    visibility: visible;
    opacity: 1;
    transition: all 0.5s;
    transition-delay: 0.7s;
}

.dino .tooltip1 {
    visibility: hidden;
    position: absolute;
    padding: 5px;
    font-size: 17px;
    background-color: #28413c;
    color: #c1cac9;
    border-radius: 5px;
    z-index: 2;
    width: 86px;
    bottom: 200px;
    right: 50px;
    opacity: 0;
    transition: all 0.3s;
}

.iconify.dino {
    visibility: hidden;
    position: fixed;
    bottom: -30px;
    right: -30px;
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
    color: #9bd6c2;
    opacity: 0.4;
    z-index: 1;
}

.easter-egg {
    position: absolute;
    bottom: 0;
    right: 0;
    color: #00000000;
    user-select: none;
}

.easter-egg .iconify.dino {
    visibility: visible;
    rotate: 100deg;
    bottom: -200px;
    right: -200px;
    transition: all 0.7s;
}

.easter-egg:hover .iconify.dino {
    visibility: visible;
    rotate: 15deg;
    bottom: -30px;
    right: -30px;
    transition: all 0.5s;
}

table {
    border-spacing: 0px;
    border: 1px solid #1d2423;
    border-bottom: none;
    border-right: none;
    border-radius: 15px;
}

tr, th {
    border-bottom: 1px solid #1d2423;
    border-right: 1px solid #1d2423;
    text-align: left;
    padding: 13px;
    color: #c1cac9
}

tr:first-child th:first-child {
    border-top-left-radius: 15px;
}

tr:first-child th:last-child {
    border-top-right-radius: 15px;
}

tr:last-child th:first-child {
    border-bottom-left-radius: 15px;
}

tr:last-child th:last-child {
    border-bottom-right-radius: 15px;
}

.spec {
    background-color: #040a09;
}

.spec-info {
    background-color: #121b19;
    font-weight: 400;
    width: 100%
}

.iconify.text {
    display: inline-flex; 
    vertical-align: text-bottom;
    color: #96afa7;
}

@keyframes animation {
    from { opacity: 0; }
    to { opacity: 1; }
}

body *:not(.titlebar, .titlebar *, .dino, .tooltip1, .tooltip) {
    animation: animation 0.5s forwards; 
}

@media (min-width: 590px) {
    .android-devices {
        display: flex;
        width: 100%;
    }

    .phone {
        margin-right: 30px;
        width: 50%;
    }

    .watch {
        width: 50%;
    }
}

.btn-back {
    width: 60px;
    height: 60px;
    margin-left: -15px;
    margin-right: 0px;
    z-index: 1 !important;
}

.iconify.back {
    color: #9bd6c2;
}

.iconify.back:hover {
    color: #57776c;
}

